--- a/confluence-mysql/docker-compose.yml
+++ b/confluence-mysql/docker-compose.yml
@@ -1,12 +1,10 @@
 version: "3.8"
 services:
-  mysql:
-    container_name: mysql
+  confluence-mysql:
+    container_name: confluence-mysql
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
     restart: unless-stopped
-    ports:
-      - 3306:3306
     environment:
       MYSQL_ROOT_PASSWORD: "root"
     networks:
