--- a/confluence/docker-compose.yml
+++ b/confluence/docker-compose.yml
@@ -1,14 +1,22 @@
 version: '3.8'
 services:
+  confluence-mysql:
+    container_name: confluence-mysql
+    image: mysql:5.6
+    command: --default-authentication-plugin=mysql_native_password
+    restart: unless-stopped
+    environment:
+      MYSQL_ROOT_PASSWORD: "root"
+    volumes:
+      - ./volume/mysql/db/:/var/lib/mysql/
+      - ./volume/mysql/conf/my.cnf:/etc/my.cnf
+
   confluence:
     image: cptactionhank/atlassian-confluence
+    user: root
     restart: unless-stopped
     ports:
       - 8090:8090
-    networks:
-      - confluence-mysql_custom-network
+    volumes:
+      - ./volume/confluence/confluence/:/var/atlassian/confluence/
     container_name: confluence
-
-networks:
-  confluence-mysql_custom-network:
-   external: true
