--- a/confluence/volume/mysql/conf/my.cnf
+++ b/confluence/volume/mysql/conf/my.cnf
@@ -13,9 +13,13 @@ default-storage-engine=INNODB
 default_authentication_plugin=mysql_native_password
 # confluence要求隔离级别READ-COMMITTED
 transaction-isolation=READ-COMMITTED
+max_allowed_packet = 256M
+innodb_log_file_size=2G
+
 [mysql]
 # 设置mysql客户端默认字符集
 default-character-set=utf8mb4
+
 [client]
 # 设置mysql客户端连接服务端时默认使用的端口
 port=3306
