--- a/confluence/docker-compose.yml
+++ b/confluence/docker-compose.yml
@@ -1,28 +1,27 @@
-version: "3.8"
+version: "3.3"
 services:
   confluence-mysql:
     container_name: confluence-mysql
     image: mysql:5.6
     command: --default-authentication-plugin=mysql_native_password
     restart: unless-stopped
-    ports:
-      - 3306:3306
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: "root"
     volumes:
       - ./volume/mysql/db/:/var/lib/mysql/
       - ./volume/mysql/conf/my.cnf:/etc/my.cnf
 
   confluence:
-    image: cptactionhank/atlassian-confluence:agent
+    container_name: confluence-agent
+    image: registry.cn-beijing.aliyuncs.com/huyuan/atlassian-confluence:latest
     user: root
-    environment:
-      TZ: Asia/Shanghai
     restart: unless-stopped
     ports:
       - 8090:8090
+    environment:
+      TZ: "Asia/Shanghai"
     volumes:
-      - ./volume/confluence/confluence/:/var/atlassian/confluence
+      - ./volume/confluence/confluence/:/var/atlassian/confluence/
       - ./volume/confluence/fonts/:/fonts
       - ./volume/confluence/setenv.sh:/opt/atlassian/confluence/bin/setenv.sh
-    container_name: confluence
+      - ./volume/confluence/server.xml:/opt/atlassian/confluence/conf/server.xml
